# NeoChat

./: .gitignore  CMakeLists.txt  README.md
3rdpackages/B-tree/: CMakeLists.txt
3rdpackages/Json/: CMakeLists.txt
NeoChatApplication/: README.md
NeoChatClient/: CMakeLists.txt  ChatListMenu.qml  ChatWindow.qml  LeftMenu.qml  LoginWindow.qml  Main.qml  MessageWindow.qml  clientnetwork.cpp  clientnetwork.h  main.cpp
NeoChatClient/modules/BaseCommun/: basecommun.cpp  basecommun.h
NeoChatClient/qml/: AddFriend.qml  ChatListMenu.qml  ChatWindow.qml  Comm.qml  Communication.js  DynamiOpenComponents.qml  LeftMenu.qml  Leftmenubutton.qml  Login.qml  LoginWindow.qml  Main.qml  Register.qml  Setting.qml  User.qml  qml.qrc
NeoChatClient/qml/component/: InputLine.qml
NeoChatClient/res/: res.qrc
NeoChatServer/: README.md
client/: .gitignore  CMakeLists.txt  ChatGpt.ini
client/src/: main.cpp
client/src/modules/LoginWidget/: LoginWidget.cpp  LoginWidget.hpp
client/src/modules/MainWindow/: MainWindow.cpp  MainWindow.hpp
client/src/modules/NetWork/: NetWork.cpp  NetWork.hpp
client/src/modules/User/: User.cpp  User.hpp
client/src/modules/UserMenuWidget/: UserMenuWidget.cpp  UserMenuWidget.hpp
client/src/modules/res/: res.qrc
client/src/modules/ui/: ContactWidget.ui  LoginWidget.ui  MainWindow.ui  Message.ui  UserMenuWidget.ui
server/: .gitignore  CMakeLists.txt  README.md
server/case/: threadwork.h  worktest.cpp
server/config/: m_base.sql  message_format  server
server/src/: main.cpp
server/src/externa_module/B-tree/: CMakeLists.txt
server/src/modules/Logs/: log.cpp  log.hpp
server/src/modules/Message/: MessageProcessor.cpp  MessageProcessor.hpp
server/src/modules/ReConf/: ReConf.cpp  ReConf.hpp
server/src/modules/callServer/: callServer.cpp  callServer.hpp
server/src/modules/colorcout/: colorcout.hpp
server/src/modules/database/: database.cpp  database.hpp
server/src/modules/ftpServer/: ftpServer.cpp  ftpServer.hpp
server/src/modules/server/: response.cpp  response.hpp  scheduTask.cpp  scheduTask.hpp  server.cpp  server.hpp
server/src/modules/tasks/: tasks.cpp  tasks.hpp
server/src/modules/user/: user.cpp  user.hpp
server/test/: CMakeLists.txt  index.html  main.cpp  pwd.cpp  test_mysql.cpp  test_parseHeader.cpp  test_pwd.cpp  test_tcpserver.cpp  test_thread_pool.cpp
